--- a/main/.gitignore
+++ b/main/.gitignore
@@ -32,6 +32,7 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+./package-lock.json
 
 # vercel
 .vercel
@@ -40,4 +41,4 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
-package-lock.json
+./package-lock.json
