--- a/main/.gitignore
+++ b/main/.gitignore
@@ -31,7 +31,14 @@ yarn-error.log*
 .pnpm-debug.log*
 
 # env files (can opt-in for committing if needed)
-.env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env
+.env.development
+.env.test
+.env.production
 ./package-lock.json
 
 # vercel
@@ -42,3 +49,4 @@ yarn-error.log*
 next-env.d.ts
 
 ./package-lock.json
+package-lock.json
