--- a/main/package.json
+++ b/main/package.json
@@ -14,6 +14,8 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "connectkit": "^1.9.1",
+    "dotenv": "^17.0.0",
+    "ethers": "^6.14.4",
     "framer-motion": "^12.19.1",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
