--- a/main/package.json
+++ b/main/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^17.0.0",
     "ethers": "^6.14.4",
     "framer-motion": "^12.19.1",
+    "groq-sdk": "^0.26.0",
     "lucide-react": "^0.523.0",
     "next": "15.3.4",
     "next-themes": "^0.4.6",
